argocd/vue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agrold-vue-frontend
  labels:
    app:  agrold-vue-frontend
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  agrold-vue-frontend
  template:
    metadata:
      labels:
        app:  agrold-vue-frontend
    spec:
      containers:
        - name:  agrold-vue-frontend
          image: ghcr.io/billgates98/agrold-vue-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "125m"
              memory: "500Mi"
            limits:
              cpu: "250m"
              memory: "1Gi"

---
apiVersion: v1
kind: Service
metadata:
  name:  agrold-vue-frontend-svc
  labels:
    app: agrold-vue-frontend
spec:
  ports:
    - targetPort: 3000
      name: http
      protocol: TCP
      port: 3000
  selector:
    app: agrold-vue-frontend


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt
    cert-manager.io/issuer-kind: Issuer
    haproxy.router.openshift.io/timeout: 5m
  labels:
    app.kubernetes.io/instance: agrold-vue-frontend
    # app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: agrold-vue-frontend
    app.kubernetes.io/version: 1.1.2
    # helm.sh/chart: relfinder-reformed-2.0.0
  name: agrold-vue-frontend
  namespace: agrold-dev
spec:
  rules:
    - host: vue-dev.agrold.org
      http:
        paths:
          - backend:
              service:
                name: agrold-vue-frontend
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - vue-dev.agrold.org
      secretName: vue-dev.agrold.org-tls
